# hft-engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: bench_matching_engine.cpp  bench_ring_buffer.cpp
src/: engine_runner.h  latency_timer.h  matching_engine.h  memory_pool.h  order_book.h  order_types.h  ring_buffer.h
tests/: test_latency_timer.cpp  test_matching_engine.cpp  test_memory_pool.cpp  test_mt_engine.cpp  test_order_book.cpp  test_order_types.cpp  test_ring_buffer.cpp
